{
    "name": "Input",
    "maps": [
        {
            "name": "GameStart",
            "id": "c090e6e7-0ef5-4446-acaf-12750a00f654",
            "actions": [
                {
                    "name": "MoveShip",
                    "type": "Value",
                    "id": "f5a7a2f6-f83f-4827-9720-a6b8a455c71f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "TurnRight",
                    "type": "Button",
                    "id": "f805d78a-9da1-4a55-ae61-5b60cc63ee79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnLeft",
                    "type": "Button",
                    "id": "4c825c38-2ddb-43e8-8bf9-1fd3cb35d83e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SubmitFleet",
                    "type": "Button",
                    "id": "76f151bc-9dc6-4b6b-b413-12b994a40d3c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShipRight",
                    "type": "Button",
                    "id": "a6852e80-5fc8-443c-8b20-9fe1e8a4f577",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShipLeft",
                    "type": "Button",
                    "id": "8700d456-1c3e-4992-b37b-10593e5df6fb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "43ffadc1-2eeb-483f-9d8d-cc33a88b6b20",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "388cf640-ff21-48ed-bdc9-0d23dee6859c",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "54a80666-331f-496f-af18-aa559931fa77",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveShip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d634c2d-4e64-43a3-8eb3-d6c248383a89",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "SubmitFleet",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d4e351a-3f46-431f-8b71-f1a3feaf7a43",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ShipRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca22b200-df96-4f29-a32f-ae7fff25c81e",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ShipLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "964d7577-f862-4426-86f6-4365a6c45a29",
            "actions": [
                {
                    "name": "SubmitAttackingShip",
                    "type": "Button",
                    "id": "4a55198c-bbed-4ac1-85de-12aff0b234cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShipLeft",
                    "type": "Button",
                    "id": "ce8f1f41-1789-4a29-b11f-a2fba67eed1d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShipRight",
                    "type": "Button",
                    "id": "c811d7cb-8d9d-4fe9-9c25-db67fb970480",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ReturnToFleetMenu",
                    "type": "Button",
                    "id": "8b69f10b-ad79-4619-94fa-8d44e6cbf095",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DimensionUp",
                    "type": "Button",
                    "id": "0496ea3d-c236-4b05-b591-38ffc1b0b748",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DimensionDown",
                    "type": "Button",
                    "id": "1cee07b4-dcdd-4ca3-9273-729512e83448",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveSelection",
                    "type": "Value",
                    "id": "8c48b6e5-82ae-44a4-a8f3-85ce098e87bb",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "455dc3fa-a8b6-4632-990f-e8341f785b1a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "Button",
                    "id": "1b342dca-2923-4bcd-b4d0-ec2be286f1d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9054f9ee-57d3-48fd-b4cd-999f7b3087f8",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "SubmitAttackingShip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12551dc4-4d98-404b-9de7-4507fbaa444b",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ReturnToFleetMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b072a45-2f21-459b-8477-4147b51d6919",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DimensionUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3c6c89e-c2f5-4602-8ea3-13cbc84952f3",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "DimensionDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a10708c-1e90-4919-9895-1e5c46a138fb",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8eb1469-cb6f-4e92-9240-b17487161c44",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "MoveSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34cd47b4-c654-4af3-95b4-3f0cd2673dd6",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ShipRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "57a6151b-32e1-43c9-9180-5f58e670144c",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ShipLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27bf76e9-1a20-4ce8-8e98-21d87156034b",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}